chore: add mobile repsonsivity to the site

--- a/html/index.html
+++ b/html/index.html
@@ -74,24 +74,29 @@
         </div>
     </section>
 
-    <h2 class="green" id="Contact">Nous Contacter</h2>
+    
     <section class="contact">
         <div>
-            <div class="contactLigne">
-                <div><i class="fa-solid fa-user"></i></div>
-                <div><a href="#">Trattoria San Pietro</a></div>
-            </div>
-            <div class="contactLigne">
-                <div><i class="fa-solid fa-map-pin"></i></div>
-                <div><a href="https://www.google.com/maps/place/Via+S.+Pietro,+95,+35139+Padova+PD,+Italie/@45.4094878,11.8664832,17z/data=!3m1!4b1!4m6!3m5!1s0x477eda460e313aeb:0xa60705e7bdb89aff!8m2!3d45.4094841!4d11.8690635!16s%2Fg%2F11cs948rx2?entry=ttu">Via S. Pietro, 95, 35139 Padova PD, Italie</a></div>
-            </div>
-            <div class="contactLigne">
-                <div><i class="fa-solid fa-phone"></i></div>
-                <div><a href="tel:+390498760330">+390498760330</a></div>
-            </div>
+            <h2 class="green" id="Contact">Nous Contacter</h2>
         </div>
-        <div>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2800.9926476638393!2d11.866483212250301!3d45.40948783696625!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477eda460e313aeb%3A0xa60705e7bdb89aff!2sVia%20S.%20Pietro%2C%2095%2C%2035139%20Padova%20PD%2C%20Italie!5e0!3m2!1sfr!2sfr!4v1697061408183!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="info">
+            <div>
+                <div class="contactLigne">
+                    <div><i class="fa-solid fa-user"></i></div>
+                    <div><a href="#">Trattoria San Pietro</a></div>
+                </div>
+                <div class="contactLigne">
+                    <div><i class="fa-solid fa-map-pin"></i></div>
+                    <div><a href="https://www.google.com/maps/place/Via+S.+Pietro,+95,+35139+Padova+PD,+Italie/@45.4094878,11.8664832,17z/data=!3m1!4b1!4m6!3m5!1s0x477eda460e313aeb:0xa60705e7bdb89aff!8m2!3d45.4094841!4d11.8690635!16s%2Fg%2F11cs948rx2?entry=ttu">Via S. Pietro, 95, 35139 Padova PD, Italie</a></div>
+                </div>
+                <div class="contactLigne">
+                    <div><i class="fa-solid fa-phone"></i></div>
+                    <div><a href="tel:+390498760330">+390498760330</a></div>
+                </div>
+            </div>
+            <div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2800.9926476638393!2d11.866483212250301!3d45.40948783696625!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477eda460e313aeb%3A0xa60705e7bdb89aff!2sVia%20S.%20Pietro%2C%2095%2C%2035139%20Padova%20PD%2C%20Italie!5e0!3m2!1sfr!2sfr!4v1697061408183!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
         </div>
     </section>
 
