fix: add good button style to awnser maquet

--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,7 @@
 
     <main class="acceuil">
         <div>
-            <h1 class="title2">San Pietro</h1>
+            <h1 class="title2 title2-adjusted">San Pietro</h1>
             <button class="find">Nous trouver</button>
         </div>
     </main>
